--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,15 @@ click==8.1.8
 distlib==0.3.9
 filelock==3.18.0
 identify==2.6.9
-mini_project==0.1
+iniconfig==2.1.0
 mypy-extensions==1.0.0
 nodeenv==1.9.1
 packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.7
+pluggy==1.5.0
 pre_commit==4.2.0
+pytest==8.3.5
 PyYAML==6.0.2
 ruff==0.11.2
 virtualenv==20.30.0
