Fix ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Run tests with pytest
         run: |
-          PYTHONPATH=. pytest test/
+          make test
 
       - name: Check formatting with black
         run: |
