Add auto reformat to make test and removed pre-commit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Run tests with pytest
         run: |
-          make test
+          pytest test
 
       - name: Check formatting with black
         run: |
